--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -10,7 +10,7 @@
 
 body
 {
-    background-color: var(--background-m);
+    background: linear-gradient(var(--background-m), #353638, var(--background-m));
     font-family: 'Poppins', sans-serif;
     color: aliceblue;
 }
@@ -39,7 +39,7 @@ body
 {
     list-style-type: none;
     padding: 7px;
-    background-color: var(--background-h-f);
+    background: linear-gradient(90deg, var(--background-h-f), #1d1e1f, var(--background-h-f));
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
     font-size: 1vw;
@@ -136,11 +136,15 @@ ul
     width: 100%;
     height: 3vw;
     top: end;
-    background: #171718;
+    background: linear-gradient(90deg, var(--background-h-f), #1d1e1f, var(--background-h-f));
     font-size: 1vw;
 }
 
-@media screen and (max-width: 600px)
+/* ADAPTAÇÃO PARA OUTRAS TELAS */
+
+/* CELULAR */
+
+@media screen and (max-width: 767px)
 {
     .dp-menu ul
     {
@@ -164,5 +168,30 @@ ul
         width: 90%;
         margin: 0 auto;
         font-size: 2vw;
+    }
+}
+
+/* TABLET */
+
+@media screen and (min-width: 768px) and (max-width:1023px)
+{
+    .dp-menu ul
+    {
+        font-size: 1.3vw;
+    }
+
+    .foot
+    {
+        font-size: 1.3vw;
+    }
+
+    .left
+    {
+        font-size: 1.3vw;
+    }
+
+    .right
+    {
+        font-size: 1.3vw;
     }
 }
