--- a/styles/style-poems.css
+++ b/styles/style-poems.css
@@ -10,7 +10,7 @@
 
 body
 {
-    background-color: var(--background-m);
+    background: linear-gradient(var(--background-m), #353638, var(--background-m));
     font-family: 'Poppins', sans-serif;
     color: aliceblue;
 }
@@ -39,7 +39,7 @@ body
 {
     list-style-type: none;
     padding: 7px;
-    background-color: var(--background-h-f);
+    background: linear-gradient(90deg, var(--background-h-f), #1d1e1f, var(--background-h-f));
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: relative;
     font-size: 1vw;
@@ -109,6 +109,55 @@ ul
     width: 100%;
     height: 3vw;
     top: end;
-    background: #171718;
+    background: linear-gradient(90deg, var(--background-h-f), #1d1e1f, var(--background-h-f));
     font-size: 1vw;
+}
+
+/* ADAPTAÇÃO PARA OUTRAS TELAS */
+
+/* CELULAR */
+
+@media screen and (max-width: 767px)
+{
+    .img
+    {
+        width: 40%;
+    }
+
+    .dp-menu ul
+    {
+        font-size: 2vw;
+    }
+
+    .foot
+    {
+        font-size: 2vw;
+    }
+
+    .poemas
+    {
+        display: block;
+        font-size: 2vw;
+    }
+}
+
+/* TABLET */
+
+@media screen and (min-width: 768px) and (max-width:1023px)
+{
+    .dp-menu ul
+    {
+        font-size: 2vw;
+    }
+
+    .foot
+    {
+        font-size: 2vw;
+    }
+
+    .poemas
+    {
+        display: block;
+        font-size: 1.8vw;
+    }
 }
