--- a/styles/style-forms.css
+++ b/styles/style-forms.css
@@ -86,6 +86,11 @@ main {
 	margin: 0 auto;
 }
 
+.titulo-principal
+{
+    font-size: 3.5vw;
+}
+
 form label, form legend {
     font-size: 1vw;
 	display: block;
@@ -98,7 +103,8 @@ input
     color: #171718;
 }
 
-.input-padrao {
+.input-padrao 
+{
 	display: block;
 	margin: 0 0 20px;
 	padding: 10px 20px;
